test/Dialect/Verif/contracts_fail.llzk
// RUN: llzk-opt -split-input-file -verify-diagnostics %s

module attributes {llzk.lang} {
  function.def @check(%x: index) {
    function.return
  }

  // expected-error@+1 {{'verif.contract' op 'function.arg_name' on argument 0 must be a string attribute}}
  verif.contract @BadArgName for @check (%x: index {function.arg_name = 7 : i64}) {
    %ok = arith.constant true
    verif.ensure_compute %ok
  }
}

// -----

module attributes {llzk.lang} {
  function.def @check(%x: index, %y: index) {
    function.return
  }

  // expected-error@+1 {{'verif.contract' op duplicate 'function.arg_name' value "dup" on argument 1}}
  verif.contract @DupArgName for @check (%x: index {function.arg_name = "dup"}, %y: index {function.arg_name = "dup"}) {
    %ok = arith.constant true
    verif.ensure_compute %ok
  }
}

// -----

module attributes {llzk.lang} {
  function.def @check(%x: index) { // expected-note {{target defined here}}
    function.return
  }

  // expected-error@+1 {{'verif.contract' op contract type does not match target type}}
  verif.contract @BadType for @check (%x: i32) {
    %ok = arith.constant true
    verif.ensure_compute %ok
  }
}

// -----

module attributes {llzk.lang} {
  struct.def @Box { // expected-note {{target defined here}}
    function.def @compute(%x: index) -> !struct.type<@Box> {
      %self = struct.new : !struct.type<@Box>
      function.return %self : !struct.type<@Box>
    }
    function.def @constrain(%self: !struct.type<@Box>, %x: index) {
      function.return
    }
  }

  // expected-error@+1 {{'verif.contract' op contract type does not match target type}}
  verif.contract @WrongStructSig for @Box (%self: !struct.type<@Box>) {
    %ok = arith.constant true
    verif.ensure_compute %ok
  }
}

// -----

module attributes {llzk.lang} {
  struct.def @Box {
    function.def @compute(%x: index) -> !struct.type<@Box> {
      %self = struct.new : !struct.type<@Box>
      function.return %self : !struct.type<@Box>
    }
    function.def @constrain(%self: !struct.type<@Box>, %x: index) { // expected-note {{target defined here}}
      function.return
    }
  }

  // expected-error@+1 {{'verif.contract' op target "@Box::@constrain" is not a supported contract target}}
  verif.contract @CannotTargetStructConstraint for @Box::@constrain (%self: !struct.type<@Box>, %x: index) {
  }
}

// -----

module attributes {llzk.lang} {
  struct.def @Box {
    function.def @compute(%x: index) -> !struct.type<@Box> { // expected-note {{target defined here}}
      %self = struct.new : !struct.type<@Box>
      function.return %self : !struct.type<@Box>
    }
    function.def @constrain(%self: !struct.type<@Box>, %x: index) {
      function.return
    }
  }

  // expected-error@+1 {{'verif.contract' op target "@Box::@compute" is not a supported contract target}}
  verif.contract @CannotTargetStructCompute for @Box::@compute (%self: !struct.type<@Box>, %x: index) {
  }
}

// -----

module attributes {llzk.lang} {
  struct.def @Box {
    function.def @product(%x: index) -> !struct.type<@Box> { // expected-note {{target defined here}}
      %self = struct.new : !struct.type<@Box>
      function.return %self : !struct.type<@Box>
    }
  }

  // expected-error@+1 {{'verif.contract' op target "@Box::@product" is not a supported contract target}}
  verif.contract @CannotTargetStructProduct for @Box::@product (%self: !struct.type<@Box>, %x: index) {
  }
}

// -----

module attributes {llzk.lang} {
  function.def @check(%x: index) {
    function.return
  }

  verif.contract @Outer for @check (%x: index) {
    // expected-error@+1 {{'function.def' op cannot be nested within 'verif.contract' operations}}
    function.def @inner() {
      function.return
    }
  }
}

// -----

module attributes {llzk.lang} {
  function.def @check(%x: index, %ok: i1) {
    function.return
  }

  verif.contract @Base for @check (%x: index, %ok: i1) {
    verif.require_compute %ok
  }

  verif.contract @Wrapper for @check (%x: index, %ok: i1) {
    // expected-error@+1 {{'verif.include' op operand type mismatch: expected type 'index', but found 'i1' for operand number 0}}
    verif.include @Base(%ok, %ok) : (i1, i1) -> ()
  }
}

// -----

module attributes {llzk.lang} {
  function.def @check() {
    function.return
  }

  verif.contract @Base for @check () {
    %ok = arith.constant true
    verif.ensure_compute %ok
  }

  verif.contract @Wrapper for @check () {
    // expected-error@+1 {{'verif.include' op can only have template instantiations when targeting a templated contract}}
    verif.include @Base<[9]>() : () -> ()
  }
}

// -----

module attributes {llzk.lang} {
  poly.template @SpecTemplate {
    poly.param @N : index

    function.def @token() {
      %n = poly.read_const @N : index
      function.return
    }

    verif.contract @Base for @SpecTemplate::@token () {
      %ok = arith.constant true
      verif.ensure_compute %ok
    }

    verif.contract @Wrapper for @SpecTemplate::@token () {
      // expected-error@+1 {{'verif.include' op must provide template instantiation parameters when calling "@Base" because not all template parameters of "@SpecTemplate" appear in the function type signature}}
      verif.include @SpecTemplate::@Base() : () -> ()
    }
  }
}

// -----

module attributes {llzk.lang} {
  poly.template @SpecTemplate {
    poly.param @N : index

    function.def @token() {
      %n = poly.read_const @N : index
      function.return
    }

    verif.contract @Base for @SpecTemplate::@token () {
      %ok = arith.constant true
      verif.ensure_compute %ok
    }

    verif.contract @Wrapper for @SpecTemplate::@token () {
      // expected-error@+1 {{'verif.include' op instantiation value '#felt<const 9> : !felt.type' is not compatible with parameter "@N" type restriction 'index'}}
      verif.include @SpecTemplate::@Base<[#felt<const 9>]>() : () -> ()
    }
  }
}

// -----

module attributes {llzk.lang} {
  struct.def @ProductOnly { // expected-note {{target defined here}}
    function.def @product(%a: !felt.type {function.arg_name = "foo"}) -> !struct.type<@ProductOnly> {
      %self = struct.new : !struct.type<@ProductOnly>
      function.return %self : !struct.type<@ProductOnly>
    }
  }

  // expected-error@+1 {{'verif.contract' op contract arg attributes [{}, {function.arg_name = "bar"}] does not match target arg attributes [{}, {function.arg_name = "foo"}]}}
  verif.contract @Unsupported for @ProductOnly (%self: !struct.type<@ProductOnly>, %a: !felt.type {function.arg_name = "bar"}) {
    %ok = arith.constant true
    verif.ensure_compute %ok
  }
}

// -----

module attributes {llzk.lang} {
  function.def @check() {
    function.return
  }

  verif.contract @Base for @check () {
    %ok = arith.constant true
    verif.ensure_compute %ok
  }

  function.def @illegal_include() {
    // expected-error@+1 {{'verif.include' op must have an ancestor of type 'verif.contract'}}
    verif.include @Base() : () -> ()
  }
}

// -----

module attributes {llzk.lang} {
  struct.def @SecretBox {
    struct.member @secret : !felt.type
    function.def @compute(%value: !felt.type) -> !struct.type<@SecretBox> {
      %self = struct.new : !struct.type<@SecretBox>
      struct.writem %self[@secret] = %value : !struct.type<@SecretBox>, !felt.type
      function.return %self : !struct.type<@SecretBox>
    }
    function.def @constrain(%self: !struct.type<@SecretBox>, %value: !felt.type) {
      function.return
    }
  }

  verif.contract @CheckSecret for @SecretBox (%self: !struct.type<@SecretBox>, %value: !felt.type) {
    %secret = struct.readm %self[@secret] : !struct.type<@SecretBox>, !felt.type
    %isEq = bool.cmp eq(%secret, %value) : !felt.type, !felt.type
    // expected-error@+1 {{'verif.require_constrain' op condition cannot be derived from a struct member value}}
    verif.require_constrain %isEq
  }
}

// -----

module attributes {llzk.lang} {
  function.def @passthrough(%a : !felt.type) -> !felt.type {
    function.return %a : !felt.type
  }

  verif.contract @FuncWithRet for @passthrough (%a : !felt.type, %ret_value : !felt.type) {
    %isEq = bool.cmp eq(%a, %ret_value) : !felt.type, !felt.type
    // expected-error@+1 {{'verif.require_compute' op condition cannot be derived from a function return value}}
    verif.require_compute %isEq
  }
}

// -----

module attributes {llzk.lang} {
  function.def @passthrough(%a : !felt.type) -> !felt.type {
    function.return %a : !felt.type
  }

  function.def @check(%a : !felt.type) {
    function.return
  }

  verif.contract @CallRet for @check (%a : !felt.type) {
    %ret = function.call @passthrough(%a) : (!felt.type) -> !felt.type
    %isEq = bool.cmp eq(%a, %ret) : !felt.type, !felt.type
    // expected-error@+1 {{'verif.require_compute' op condition cannot be derived from a function return value}}
    verif.require_compute %isEq
  }
}

// -----

module attributes {llzk.main = !struct.type<@Main>, llzk.lang} {
  struct.def @Main {
    function.def @compute(%value : !felt.type) -> !struct.type<@Main> {
      %self = struct.new : !struct.type<@Main>
      function.return %self : !struct.type<@Main>
    }
    function.def @constrain(%self: !struct.type<@Main>, %value : !felt.type) {
      function.return
    }
  }

  verif.contract @MainPre for @Main (%self: !struct.type<@Main>, %value : !felt.type) {
    %ok = arith.constant true
    // expected-error@+1 {{'verif.require_compute' op cannot appear directly in a contract that targets the main entry-point struct}}
    verif.require_compute %ok
  }
}

// -----

module attributes {llzk.main = !struct.type<@Main>, llzk.lang} {
  struct.def @Main {
    function.def @compute(%value : !felt.type) -> !struct.type<@Main> {
      %self = struct.new : !struct.type<@Main>
      function.return %self : !struct.type<@Main>
    }
    function.def @constrain(%self: !struct.type<@Main>, %value : !felt.type) {
      function.return
    }
  }

  verif.contract @MainPre for @Main (%self: !struct.type<@Main>, %value : !felt.type) {
    %ok = arith.constant true
    // expected-error@+1 {{'verif.require_constrain' op cannot appear directly in a contract that targets the main entry-point struct}}
    verif.require_constrain %ok
  }
}

// -----

module attributes {llzk.lang} {
  struct.def @Top {
    function.def @compute() -> !struct.type<@Top> {
      %self = struct.new : !struct.type<@Top>
      function.return %self : !struct.type<@Top>
    }
    function.def @constrain(%self: !struct.type<@Top>)  {
      function.return
    }
  }

  verif.contract @Foo for @Top (%self: !struct.type<@Top>) {
    // expected-error@+1 {{'poly.read_const' op only valid within a 'poly.template' ancestor or 'verif.contract' that targets an operation with a 'poly.template' ancestor}}
    %1 = poly.read_const @DNE : i1
    verif.ensure_compute %1
  }
}
